[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.6",
    "langchain-anthropic>=1.4.4",
    "langchain-core>=1.4.3",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "python-dotenv>=1.2.2",
]
